# nu-lang

./: .gitignore  Cargo.toml  ERROR_HANDLING_FIX_SUMMARY.md  GCC14_INSTALLATION_GUIDE.md  LICENSE.md  MUT_CLEANUP_COMPLETE.md  NU2CPP_CLOSURE_FIX_REPORT.md  NU2CPP_IMPL_FIX_COMPLETE.md  NU2CPP_INTEGRATION_ANALYSIS.md  PATTERN_MATCHING_IMPROVEMENTS.md  RANGE_CONVERSION_VERIFICATION.md  RANGE_EXPRESSION_FIX_REPORT.md  README.md  ReadMe.md  ReadMeCN.md  SMART_POINTER_TASK_COMPLETE.md  TASK_COMPLETE.md  TASK_COMPLETE.txt  TASK_COMPLETION_SUMMARY.md  USAGE.md  arii.md  faq.md  fix_nu2ts_output.sh  githubcheck.sh  index copy.html  index.html  index2.html  libnu_v1_6_3_features_restored.rlib  nu2ts_error_analysis.md  nu_runtime.ts  parse_match_expression_COMPLETE.txt  patch.md  quick_test.sh  setup-hooks.sh  temp_test.cpp  test_add.cpp  test_add.nu  test_add_oneline.cpp  test_add_oneline.nu  test_all_projects.sh  (+40 more)
.githooks/: pre-push
.github/: RELEASE.md  VSCODE_EXTENSION_RELEASE.md
docs/: NU2CPP23.md  NU2CPP_ANALYSIS_SUMMARY.md  NU2CPP_CRITICAL_FIXES.md  NU2CPP_DEEP_EVALUATION.md  NU2CPP_DETAILED_PLAN.md  NU2CPP_IMPROVEMENTS.md  NU2CPP_REVISED_PLAN.md  NU2CPP_TYPE_SYSTEM_FIX_REPORT.md  NU2CPP_V2_COMPLETION_REPORT.md  NU2CPP_V2_FINAL_REPORT.md  NU2CPP_V2_PROGRESS.md  NU2CPP_V2_REFACTORING_PLAN.md  NU2CPP_V2_TASK_SUMMARY.md  WORKSPACE_SUPPORT.md
runtime/: nu_core.hpp
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  module.rs  parser.rs  project.rs  utils.rs
test_syn_issue/: Cargo.toml
tests/: workspace_integration.rs
todo/: development_plan.md  fix_remaining_compilation_errors.md  match_conversion_implementation.md  nu2ts_chain_optimization.md  nu2ts_evaluation_and_improvements.md  nu2ts_evaluation_summary.md  nu2ts_implementation_plan.md  nu2ts_micro_runtime.ts  nu2ts_missing_features.md  nu2ts_prototype.rs  nu2ts_runtime_implementation_report.md  nu2ts_runtime_optimization.md  nu2ts_strategic_analysis.md  nu2ts_tasks.md  nubp_design_v1.md  nubp_example_umg.md  nubp_quick_reference.md  roadmap_summary.md  syn.md  vscode.md
video/: index1.html  (+1 more)
(+120 files in other folders)
