[package]
name = "nu_compiler"
version = "1.6.5"
edition = "2021"
authors = ["Nu Language Team"]
description = "Nu Language Compiler - High-Density Rust Dialect Transpiler"

[[bin]]
name = "nuc"
path = "src/main.rs"

[[bin]]
name = "rust2nu"
path = "src/bin/rust2nu.rs"

[[bin]]
name = "nu2rust"
path = "src/bin/nu2rust.rs"

[[bin]]
name = "cargo2nu"
path = "src/bin/cargo2nu.rs"

[[bin]]
name = "nu2cargo"
path = "src/bin/nu2cargo.rs"

[[bin]]
name = "nu2ts"
path = "src/bin/nu2ts.rs"

[[bin]]
name = "nu2cpp"
path = "src/bin/nu2cpp.rs"

[[bin]]
name = "nu2cmake"
path = "src/bin/nu2cmake.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
prettyplease = "0.2"
logos = "0.13"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_toml = "0.17"
walkdir = "2.4"
regex = "1.10"
thiserror = "1.0"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
tempfile = "3.10"